tests/sksl/errors/FloatRemainder.dsl.glsl
### Compilation failed:

error: type mismatch: '%' cannot operate on 'float', 'float'

error: type mismatch: '%=' cannot operate on 'float', 'float'

2 errors
